// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildkite-graph Pipeline env dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
}

}
"
`;

exports[`buildkite-graph Pipeline env json 1`] = `
Object {
  "env": Object {
    "COLOR": "1",
  },
  "steps": Array [],
}
`;

exports[`buildkite-graph Pipeline env yaml 1`] = `
"env:
  COLOR: '1'
steps: []
"
`;

exports[`buildkite-graph Pipeline steps dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Pipeline steps json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command",
    },
  ],
}
`;

exports[`buildkite-graph Pipeline steps yaml 1`] = `
"steps:
  - command: command
"
`;

exports[`buildkite-graph Steps Block branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "branches": "!release/* master stable/*",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block branches yaml 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    block: my title
"
`;

exports[`buildkite-graph Steps Block can be added dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for ':rocket: Release!']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block can be added dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for ':rocket: Release!']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block can be added json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added json 2`] = `
Object {
  "steps": Array [
    Object {
      "block": ":rocket: Release!",
      "prompt": "Release to production?",
    },
  ],
}
`;

exports[`buildkite-graph Steps Block can be added yaml 1`] = `
"steps:
  - block: ':rocket: Release!'
"
`;

exports[`buildkite-graph Steps Block can be added yaml 2`] = `
"steps:
  - block: ':rocket: Release!'
    prompt: Release to production?
"
`;

exports[`buildkite-graph Steps Block with fields dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[block for 'my title']\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Block with fields json 1`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "key": "field-1",
        },
        Object {
          "key": "field-2",
          "options": Array [],
        },
        Object {
          "key": "field-3",
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 2`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "Flying Dolphin",
          "hint": "What’s the code name for this release? :name_badge:",
          "key": "release-name",
          "label": "Code Name",
          "required": false,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 3`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": "beta",
          "hint": "What’s the release stream?",
          "key": "release-stream",
          "label": "Stream",
          "options": Array [
            Object {
              "label": "Beta",
              "value": "beta",
            },
            Object {
              "label": "Stable",
              "value": "stable",
            },
          ],
          "required": false,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields json 4`] = `
Object {
  "steps": Array [
    Object {
      "block": "my title",
      "fields": Array [
        Object {
          "default": Array [
            "na",
            "eur",
            "asia",
            "aunz",
          ],
          "hint": "Which regions should we deploy this to? :earth_asia:",
          "key": "regions",
          "label": "Regions",
          "multiple": true,
          "options": Array [
            Object {
              "label": "North America",
              "value": "na",
            },
            Object {
              "label": "Europe",
              "value": "eur",
            },
            Object {
              "label": "Asia",
              "value": "asia",
            },
            Object {
              "label": "Oceania",
              "value": "aunz",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Block with fields yaml 1`] = `
"steps:
  - block: my title
    fields:
      - key: field-1
      - key: field-2
        options: []
      - key: field-3
"
`;

exports[`buildkite-graph Steps Block with fields yaml 2`] = `
"steps:
  - block: my title
    fields:
      - key: release-name
        label: Code Name
        hint: 'What’s the code name for this release? :name_badge:'
        required: false
        default: Flying Dolphin
"
`;

exports[`buildkite-graph Steps Block with fields yaml 3`] = `
"steps:
  - block: my title
    fields:
      - key: release-stream
        label: Stream
        hint: What’s the release stream?
        required: false
        options:
          - label: Beta
            value: beta
          - label: Stable
            value: stable
        default: beta
"
`;

exports[`buildkite-graph Steps Block with fields yaml 4`] = `
"steps:
  - block: my title
    fields:
      - key: regions
        label: Regions
        hint: 'Which regions should we deploy this to? :earth_asia:'
        options:
          - label: North America
            value: na
          - label: Europe
            value: eur
          - label: Asia
            value: asia
          - label: Oceania
            value: aunz
        default:
          - na
          - eur
          - asia
          - aunz
        multiple: true
"
`;

exports[`buildkite-graph Steps Command agents dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command agents json 1`] = `
Object {
  "steps": Array [
    Object {
      "agents": Object {
        "npm": "true",
      },
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command agents yaml 1`] = `
"steps:
  - command: noop
    agents:
      npm: 'true'
"
`;

exports[`buildkite-graph Steps Command artifact_paths dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command artifact_paths json 1`] = `
Object {
  "steps": Array [
    Object {
      "artifact_paths": Array [
        "logs/**/*",
        "coverage/**/*",
      ],
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command artifact_paths yaml 1`] = `
"steps:
  - command: noop
    artifact_paths:
      - logs/**/*
      - coverage/**/*
"
`;

exports[`buildkite-graph Steps Command branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "!release/* master stable/*",
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command branches yaml 1`] = `
"steps:
  - branches: '!release/* master stable/*'
    command: noop
"
`;

exports[`buildkite-graph Steps Command concurrency dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command concurrency json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "concurrency": 3,
      "concurrency_group": "my-app/deploy",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command concurrency yaml 1`] = `
"steps:
  - command: noop
    concurrency: 3
    concurrency_group: my-app/deploy
"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 2>\\" [ color = \\"grey\\" ];
  \\"<echo This runs regardless of the success or failure 3>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo This runs regardless of the success or failure 2>\\";
  \\"<echo This runs regardless of the success or failure 3>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 2>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure 3>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 2",
    },
    Object {
      "command": "echo This runs regardless of the success or failure 3",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure multiple subsequent always-executed subsequent steps do not get an additional wait step yaml 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - command: echo This runs regardless of the success or failure 2
  - command: echo This runs regardless of the success or failure 3
"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<command.sh>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<echo This runs regardless of the success or failure>\\" [ color = \\"grey\\" ];
  \\"<echo The command passed>\\" [ color = \\"grey\\" ];
}

  \\"<command.sh>\\";
  \\"<echo This runs regardless of the success or failure>\\";
  \\"<echo The command passed>\\";
  \\"<command.sh>\\" -> \\"<echo This runs regardless of the success or failure>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"<command.sh>\\" -> \\"<echo The command passed>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "command.sh",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "echo This runs regardless of the success or failure",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "echo The command passed",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command continue on failure subsequent depending steps that are not always executed get an additional wait step yaml 1`] = `
"steps:
  - command: command.sh
  - wait: ~
    continue_on_failure: true
  - command: echo This runs regardless of the success or failure
  - wait: ~
  - command: echo The command passed
"
`;

exports[`buildkite-graph Steps Command env dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command env json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "env": Object {
        "DEBUG": "true",
        "RAILS_ENV": "test",
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command env yaml 1`] = `
"steps:
  - command: noop
    env:
      RAILS_ENV: test
      DEBUG: 'true'
"
`;

exports[`buildkite-graph Steps Command id dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command id json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "id": "my-id",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command id yaml 1`] = `
"steps:
  - command: noop
    id: my-id
"
`;

exports[`buildkite-graph Steps Command label dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"my label\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command label json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "label": "my label",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command label yaml 1`] = `
"steps:
  - label: my label
    command: noop
"
`;

exports[`buildkite-graph Steps Command parallelism dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command parallelism json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "parallelism": 123,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command parallelism yaml 1`] = `
"steps:
  - command: noop
    parallelism: 123
"
`;

exports[`buildkite-graph Steps Command plugins dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command plugins json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command plugins yaml 1`] = `
"steps:
  - command: noop
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
"
`;

exports[`buildkite-graph Steps Command retry dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 5`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 6`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry dot 7`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command retry json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": true,
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": Array [
          Object {
            "exit_status": "*",
            "limit": 2,
          },
          Object {
            "exit_status": 255,
            "limit": 2,
          },
        ],
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 3`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "allowed": false,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 4`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "allowed": false,
          "reason": "Sorry, you can't retry a deployment",
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 5`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 6`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry json 7`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "retry": Object {
        "automatic": true,
        "manual": Object {
          "permit_on_passed": true,
        },
      },
    },
  ],
}
`;

exports[`buildkite-graph Steps Command retry yaml 1`] = `
"steps:
  - command: noop
    retry:
      automatic: true
"
`;

exports[`buildkite-graph Steps Command retry yaml 2`] = `
"steps:
  - command: noop
    retry:
      automatic:
        - exit_status: '*'
          limit: 2
        - exit_status: 255
          limit: 2
"
`;

exports[`buildkite-graph Steps Command retry yaml 3`] = `
"steps:
  - command: noop
    retry:
      manual:
        allowed: false
"
`;

exports[`buildkite-graph Steps Command retry yaml 4`] = `
"steps:
  - command: noop
    retry:
      manual:
        allowed: false
        reason: 'Sorry, you can''t retry a deployment'
"
`;

exports[`buildkite-graph Steps Command retry yaml 5`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command retry yaml 6`] = `
"steps:
  - command: noop
    retry:
      manual:
        permit_on_passed: true
"
`;

exports[`buildkite-graph Steps Command retry yaml 7`] = `
"steps:
  - command: noop
    retry:
      manual:
        permit_on_passed: true
      automatic: true
"
`;

exports[`buildkite-graph Steps Command skip dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command skip json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "skip": "my reason",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command skip yaml 1`] = `
"steps:
  - command: noop
    skip: true
"
`;

exports[`buildkite-graph Steps Command skip yaml 2`] = `
"steps:
  - command: noop
    skip: my reason
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean json 2`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml 1`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail boolean yaml 2`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command soft_fail multiple dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail multiple json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": Array [
        Object {
          "exit_status": 1,
        },
        Object {
          "exit_status": -127,
        },
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail multiple yaml 1`] = `
"steps:
  - command: noop
    soft_fail:
      - exit_status: 1
      - exit_status: -127
"
`;

exports[`buildkite-graph Steps Command soft_fail star dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command soft_fail star json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
      "soft_fail": true,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command soft_fail star yaml 1`] = `
"steps:
  - command: noop
    soft_fail: true
"
`;

exports[`buildkite-graph Steps Command step addition dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command step addition json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command step addition yaml 1`] = `
"steps:
  - command:
      - yarn
      - yarn test
"
`;

exports[`buildkite-graph Steps Command timeouts can be infinite dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<noop>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts can be infinite json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "noop",
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts can be infinite yaml 1`] = `
"steps:
  - command: noop
"
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "timeout_in_minutes": 20,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts commands with timeouts set step timeout total yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout_in_minutes: 20
"
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts one infinite timeout will cancel out the others yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
"
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn install && yarn test>\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": Array [
        "yarn install",
        "yarn test",
      ],
      "timeout_in_minutes": 2,
    },
  ],
}
`;

exports[`buildkite-graph Steps Command timeouts step timeout total trumps commands yaml 1`] = `
"steps:
  - command:
      - yarn install
      - yarn test
    timeout_in_minutes: 2
"
`;

exports[`buildkite-graph Steps Trigger async dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Label\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Label\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Label\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Label\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger async json 1`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json 2`] = `
Object {
  "steps": Array [
    Object {
      "label": "Label",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async json 3`] = `
Object {
  "steps": Array [
    Object {
      "async": true,
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger async yaml 1`] = `
"steps:
  - label: Label
    async: true
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger async yaml 2`] = `
"steps:
  - label: Label
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger async yaml 3`] = `
"steps:
  - async: true
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger build dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 3`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 4`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build dot 5`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger build json 1`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "env": Object {
          "ANOTHER_KEY": "VALUE",
          "KEY": "VALUE",
        },
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 2`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "branch": "rease-bla",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 3`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "commit": "c0ffee",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 4`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "message": "My messge",
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build json 5`] = `
Object {
  "steps": Array [
    Object {
      "build": Object {
        "meta_data": Object {
          "release-version": "1.1",
          "some-other": "value",
        },
      },
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger build yaml 1`] = `
"steps:
  - build:
      env:
        KEY: VALUE
        ANOTHER_KEY: VALUE
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger build yaml 2`] = `
"steps:
  - build:
      branch: rease-bla
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger build yaml 3`] = `
"steps:
  - build:
      commit: c0ffee
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger build yaml 4`] = `
"steps:
  - build:
      message: My messge
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger build yaml 5`] = `
"steps:
  - build:
      meta_data:
        release-version: '1.1'
        some-other: value
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another-build]\\" [ color = \\"grey\\" ];
}

  \\"another-build\\" [ shape =Msquare ];
  \\"[trigger another-build]\\" -> \\"another-build\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline dot 2`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another-build]\\" [ color = \\"grey\\" ];
}

  \\"another-build\\" [ shape =Msquare ];
  \\"[trigger another-build]\\" -> \\"another-build\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json 1`] = `
Object {
  "steps": Array [
    Object {
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline json 2`] = `
Object {
  "steps": Array [
    Object {
      "trigger": "another-build",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml 1`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger can trigger another pipeline yaml 2`] = `
"steps:
  - trigger: another-build
"
`;

exports[`buildkite-graph Steps Trigger limit branches dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"[trigger another]\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"[trigger another]\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger limit branches json 1`] = `
Object {
  "steps": Array [
    Object {
      "branches": "master",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger limit branches yaml 1`] = `
"steps:
  - branches: master
    trigger: another
"
`;

exports[`buildkite-graph Steps Trigger with a label dot 1`] = `
"digraph \\"whatever\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Trigger another pipeline\\" [ color = \\"grey\\" ];
}

  \\"another\\" [ shape =Msquare ];
  \\"Trigger another pipeline\\" -> \\"another\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph Steps Trigger with a label json 1`] = `
Object {
  "steps": Array [
    Object {
      "label": "Trigger another pipeline",
      "trigger": "another",
    },
  ],
}
`;

exports[`buildkite-graph Steps Trigger with a label yaml 1`] = `
"steps:
  - label: Trigger another pipeline
    trigger: another
"
`;

exports[`buildkite-graph general serialization complex dot 1`] = `
"digraph \\"web-build-editor\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Build Editor\\" [ color = \\"grey\\" ];
  \\"Test Editor\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"Annotate failures\\" [ color = \\"grey\\" ];
  \\"Upload coverage\\" [ color = \\"grey\\" ];
  \\"Integration tests\\" [ color = \\"grey\\" ];
}

subgraph cluster_2 {
  graph [ color = \\"black\\" ];
  \\":saucelabs: Integration tests\\" [ color = \\"grey\\" ];
  \\"Visreg baseline update\\" [ color = \\"grey\\" ];
}

subgraph cluster_3 {
  graph [ color = \\"black\\" ];
  \\"<web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases>\\" [ color = \\"grey\\" ];
  \\"Copy to deploy bucket\\" [ color = \\"grey\\" ];
}

subgraph cluster_4 {
  graph [ color = \\"black\\" ];
  \\"Update checkpoint\\" [ color = \\"grey\\" ];
  \\"Deploy to tech\\" [ color = \\"grey\\" ];
  \\"Deploy to usertesting\\" [ color = \\"grey\\" ];
}

  \\"Test Editor\\";
  \\"Annotate failures\\";
  \\"Upload coverage\\";
  \\"Build Editor\\";
  \\"Integration tests\\";
  \\":saucelabs: Integration tests\\";
  \\"Visreg baseline update\\";
  \\"<web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases>\\";
  \\"Copy to deploy bucket\\";
  \\"Update checkpoint\\";
  \\"Deploy to tech\\";
  \\"web-deploy\\" [ shape =Msquare ];
  \\"Deploy to usertesting\\";
  \\"Test Editor\\" -> \\"Annotate failures\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Test Editor\\" -> \\"Upload coverage\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Build Editor\\" -> \\"Integration tests\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
  \\"Integration tests\\" -> \\":saucelabs: Integration tests\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\"Integration tests\\" -> \\"Visreg baseline update\\" [ ltail = \\"cluster_1\\", lhead = \\"cluster_2\\" ];
  \\"Integration tests\\" -> \\"<web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases>\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\":saucelabs: Integration tests\\" -> \\"<web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases>\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\":saucelabs: Integration tests\\" -> \\"Copy to deploy bucket\\" [ ltail = \\"cluster_2\\", lhead = \\"cluster_3\\" ];
  \\"Copy to deploy bucket\\" -> \\"Update checkpoint\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to tech\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to tech\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
  \\"Copy to deploy bucket\\" -> \\"Deploy to usertesting\\" [ ltail = \\"cluster_3\\", lhead = \\"cluster_4\\" ];
  \\"Deploy to usertesting\\" -> \\"web-deploy\\" [ label = \\"triggers\\" ];
}
"
`;

exports[`buildkite-graph general serialization complex json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "web/bin/buildkite/run_web_step.sh build editor",
      "label": "Build Editor",
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh test editor",
      "label": "Test Editor",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "label": "Annotate failures",
      "plugins": Array [
        Object {
          "bugcrowd/test-summary#v1.5.0": Object {
            "inputs": Array [
              Object {
                "artifact_path": "web/target/htmllint-*.txt",
                "label": ":htmllint: HTML lint",
                "type": "oneline",
              },
            ],
          },
        },
        Object {
          "detect-clowns#v1.0.0": null,
        },
      ],
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh deploy-report coverage editor",
      "label": "Upload coverage",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests local editor chrome",
      "label": "Integration tests",
      "parallelism": 8,
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor safari",
      "label": ":saucelabs: Integration tests",
      "parallelism": 8,
      "plugins": Array [
        Object {
          "sauce-connect-plugin": null,
        },
      ],
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh run-visual-regression editor",
      "label": "Visreg baseline update",
    },
    Object {
      "continue_on_failure": true,
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor",
      "label": "Copy to deploy bucket",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"",
      "label": "Update checkpoint",
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "tech",
          "RELEASE_PATH": "some/path/",
        },
      },
      "label": "Deploy to tech",
      "trigger": "web-deploy",
    },
    Object {
      "build": Object {
        "env": Object {
          "FLAVOR": "usertesting",
          "RELEASE_PATH": "some/path/",
        },
      },
      "label": "Deploy to usertesting",
      "trigger": "web-deploy",
    },
  ],
}
`;

exports[`buildkite-graph general serialization complex yaml 1`] = `
"steps:
  - label: Build Editor
    command: web/bin/buildkite/run_web_step.sh build editor
  - label: Test Editor
    command: web/bin/buildkite/run_web_step.sh test editor
  - wait: ~
    continue_on_failure: true
  - label: Annotate failures
    plugins:
      - 'bugcrowd/test-summary#v1.5.0':
          inputs:
            - label: ':htmllint: HTML lint'
              artifact_path: web/target/htmllint-*.txt
              type: oneline
      - 'detect-clowns#v1.0.0': ~
  - label: Upload coverage
    command: web/bin/buildkite/run_web_step.sh deploy-report coverage editor
  - wait: ~
  - label: Integration tests
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests local editor
      chrome
    parallelism: 8
  - wait: ~
  - label: ':saucelabs: Integration tests'
    command: >-
      web/bin/buildkite/run_web_step.sh run-integration-tests saucelabs editor
      safari
    parallelism: 8
    plugins:
      - sauce-connect-plugin: ~
  - label: Visreg baseline update
    command: web/bin/buildkite/run_web_step.sh run-visual-regression editor
  - wait: ~
    continue_on_failure: true
  - command: web/bin/buildkite/run_web_step.sh annotate-cucumber-failed-cases
  - wait: ~
  - label: Copy to deploy bucket
    command: web/bin/buildkite/run_web_step.sh copy-to-deploy-bucket editor
  - wait: ~
  - label: Update checkpoint
    command: production/test/jobs/advance_branch.sh \\"checkpoint/web/green/editor\\"
  - label: Deploy to tech
    build:
      env:
        FLAVOR: tech
        RELEASE_PATH: some/path/
    trigger: web-deploy
  - label: Deploy to usertesting
    build:
      env:
        FLAVOR: usertesting
        RELEASE_PATH: some/path/
    trigger: web-deploy
"
`;

exports[`buildkite-graph general serialization simple dot 1`] = `
"digraph \\"web-deploy\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"Deploy\\" [ color = \\"grey\\" ];
}

}
"
`;

exports[`buildkite-graph general serialization simple json 1`] = `
Object {
  "env": Object {
    "DEBUG": "true",
    "USE_COLOR": "1",
  },
  "steps": Array [
    Object {
      "command": "buildkite/deploy_web.sh",
      "label": "Deploy",
    },
  ],
}
`;

exports[`buildkite-graph general serialization simple yaml 1`] = `
"env:
  USE_COLOR: '1'
  DEBUG: 'true'
steps:
  - label: Deploy
    command: buildkite/deploy_web.sh
"
`;

exports[`buildkite-graph missing transitive steps get added to the graph dot 1`] = `
"digraph \\"test\\" {
  graph [ compound =true ];
subgraph cluster_0 {
  graph [ color = \\"black\\" ];
  \\"<yarn>\\" [ color = \\"grey\\" ];
}

subgraph cluster_1 {
  graph [ color = \\"black\\" ];
  \\"<yarn test>\\" [ color = \\"grey\\" ];
}

  \\"<yarn>\\";
  \\"<yarn test>\\";
  \\"<yarn>\\" -> \\"<yarn test>\\" [ ltail = \\"cluster_0\\", lhead = \\"cluster_1\\" ];
}
"
`;

exports[`buildkite-graph missing transitive steps get added to the graph json 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "yarn",
    },
    Object {
      "wait": null,
    },
    Object {
      "command": "yarn test",
    },
  ],
}
`;

exports[`buildkite-graph missing transitive steps get added to the graph yaml 1`] = `
"steps:
  - command: yarn
  - wait: ~
  - command: yarn test
"
`;
